--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.14.0",
     "mongodb": "^2.2.19",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "webpack-dev-server --inline",
