--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "node-libs-browser": "^2.0.0",
+    "react-css-components": "^1.0.1",
     "react-scripts": "0.8.4",
+    "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
   },
   "dependencies": {
