Implemented Drag and Drop front end

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "node-libs-browser": "^2.0.0",
     "react-css-components": "^1.0.1",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-scripts": "0.8.4",
     "style-loader": "^0.13.1",
     "webpack": "^1.14.0"
