--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "webpack": "^1.14.0"
   },
   "dependencies": {
+    "babel-preset-stage-1": "^6.22.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "material-ui": "^0.16.7",
     "mongodb": "^2.2.19",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-router": "^3.0.0"
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "webpack-dev-server --inline",
